--- a/fake-news-detection/templates/index.html
+++ b/fake-news-detection/templates/index.html
@@ -17,14 +17,14 @@ Fake News Detection
 
   <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <form action="/articles/show" method=get>
+            <form id="main_form" action="/calculate" method=get>
                 <div class="form-group">
                     <div class="col-md-12">
-                        <input class="form-control input-lg" type="url" name="url_to_clean" placeholder="Paste the URL of an article">
+                        <input class="form-control input-lg" type="url" name="url" placeholder="Paste the URL of an article">
                     </div>
                     <div class="col-md-12">
-                        <br />
-                        <button class="btn btn-success btn-lg">Extract</button>
+                        <br/>
+                          <button class="btn btn-success btn-lg" form="main_form">Extract</button>
                     </div>
                 </div>
             </form>
