--- a/fake-news-detection/templates/calculate.html
+++ b/fake-news-detection/templates/calculate.html
@@ -9,7 +9,7 @@ Fake News Detection
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <h3>Chance of it being Real: </h3>
-      <h2>{{ value }}</h2>
+      <h2>{{ value }} %</h2>
     </div>
   </div>
 </div>
