--- a/fake-news-detection/templates/index.html
+++ b/fake-news-detection/templates/index.html
@@ -17,14 +17,14 @@ Fake News Detection
 
   <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <form id="main_form" action="/calculate" method=get>
+            <form id="main_form" action="/calculate" method=get onsubmit="loading()">
                 <div class="form-group">
                     <div class="col-md-12">
-                        <input class="form-control input-lg" type="url" name="url" placeholder="Paste the URL of an article">
+                        <input class="form-control input-lg" type="url" name="url" placeholder="Paste the URL of an article" required>
                     </div>
                     <div class="col-md-12">
                         <br/>
-                          <button class="btn btn-success btn-lg" form="main_form" onclick="loading()">Extract</button>
+                          <button class="btn btn-success btn-lg" id="calBtn" form="main_form" >Calculate</button>
                     </div>
                 </div>
             </form>
@@ -37,6 +37,7 @@ Fake News Detection
 <script type="text/javascript">
   function loading(){
     document.getElementById('loading').style.display = "block";
+    document.getElementById('calBtn').disabled = true;
   }
 </script>
 
